--- a/movie-ticket/src/main/resources/templates/seat.html
+++ b/movie-ticket/src/main/resources/templates/seat.html
@@ -9,14 +9,14 @@
         <div class="row my-5 justify-content-center">
             <h3 class="text-center mb-5">Chọn ghế xem phim Cú Máy Ăn Tiền</h3>
             <div class="col-lg-9 map">
-                <form method="post">
+                <form th:action="@{/showtime/check-out}" method="post">
                     <div class="d-flex flex-column align-items-center text-center">
                         <h5 class="my-3">MÀN HÌNH</h5>
                         <hr style="width: 50%;color: #D9D9D9">
                     </div>
                     <div class="row">
                         <div th:each="seat,loop: ${seats}" style="width: 10%" class="selected-seat">
-                            <input name="seat-select" th:disabled="${loop.count <=20}" th:id="${seat}" type="checkbox" class="btn-check"
+                            <input name="seat-select" th:disabled="${seatsActive.contains(seat)}" th:id="${seat}" type="checkbox" class="btn-check"
                                    th:value="${seat}">
                             <label th:for="${seat}" class="btn seat"
                                    th:text="${seat}">Checked</label>
