--- a/movie-ticket/src/main/resources/static/css/main.css
+++ b/movie-ticket/src/main/resources/static/css/main.css
@@ -288,6 +288,9 @@ label.btn.seat {
 .example.user-select .box {
     background: #E20442;
     border: 2px solid #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 label.form-label, label.form-check-label {
@@ -399,8 +402,9 @@ p.number-order {
 
 .table-dashboard table.table.table-hover th {
     color: #FFF;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: uppercase;
+    padding: 14px 10px;
 }
 
 .table-dashboard table.table.table-hover td {
@@ -408,16 +412,111 @@ p.number-order {
     font-size: 16px;
 }
 
-.table-dashboard table.table.table-hover {
+.table-main {
     border-radius: 5px;
     background: #2E2F33;
     padding: 20px;
     margin: 30px 0;
 }
-
-.table>:not(caption)>*>* {
-    padding: 10px 20px;
-    background-color: var(--bs-table-bg);
-     border-bottom-width: unset;
-     box-shadow: unset;
+.table-main thead {
+    background: #43444A;
 }
+
+tbody, td, tfoot, th, thead, tr {
+    border-style: unset;
+}
+
+.table-hover>tbody>tr:hover {
+    border-radius: 5px;
+    background: #53545C;
+}
+
+.search-table input.form-control {
+    border-radius: 5px;
+    border: 2px solid #686868;
+}
+
+.search-table label {
+    color: #848484;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.form-floating>.form-control, .form-floating>.form-control-plaintext, .form-floating>.form-select {
+    height: calc(2.5rem + 2px);
+    line-height: 1.25;
+}
+.form-floating>label {
+    padding: 10px 20px;
+}
+
+.form-floating>.form-control-plaintext:focus, .form-floating>.form-control-plaintext:not(:placeholder-shown), .form-floating>.form-control:focus, .form-floating>.form-control:not(:placeholder-shown) {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.form-floating>.form-control-plaintext~label, .form-floating>.form-control:focus~label, .form-floating>.form-control:not(:placeholder-shown)~label, .form-floating>.form-select~label {
+    transform: unset;
+    display: none;
+}
+
+input.form-control.btn.btn-primary {
+    background: #E20442;
+    border: unset;
+    border-radius: 5px;
+    color: #fff;
+}
+
+input[type="date"] {
+    position: relative;
+    padding: 10px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    color: transparent;
+    background: none;
+    z-index: 1;
+}
+
+input[type="date"]:before {
+    color: transparent;
+    background: none;
+    display: block;
+    font-family: 'FontAwesome';
+    content: '\f073';
+    /* This is the calendar icon in FontAwesome */
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #999;
+}
+
+.table-main tbody .fa-solid {
+    color: #848484;
+    padding: 0px 10px;
+}
+li.page-item.disabled .page-link {
+    background: #2E2F33;
+    opacity: .55;
+}
+
+.page-link {
+    background: #2E2F33;
+    border: unset;
+    color: #848484;
+}
+
+li.page-item.active .page-link, li.page-item.active .page-link, .page-link:hover, .page-link:focus{
+    border-radius: 5px;
+    border: 2px solid #FFF;
+    background: #E20442;
+    color: #FFFFFF;
+}
+
+.table-main .form-floating>.form-control:focus {
+    border: 1px #dc3545 solid;
+    box-shadow: unset;
+}
+
