--- a/movie-ticket/src/main/resources/templates/dashboard/add-movie.html
+++ b/movie-ticket/src/main/resources/templates/dashboard/add-movie.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{layout::head}">
 </head>
 <body>
 
+<div class="container" style="margin-top: 40px">
+    <header th:replace="~{layout::header}"></header>
+</div>
 </body>
 </html>
