--- a/movie-ticket/src/main/resources/templates/dashboard/movies.html
+++ b/movie-ticket/src/main/resources/templates/dashboard/movies.html
@@ -1,122 +1,109 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="~{layout::head}">
 </head>
 <body>
-
-<div class="container" style="margin-top: 40px">
+<div class="container">
     <header th:replace="~{layout::header}"></header>
-    <div class="row">
-        <div class="col-lg-4">
-<!--            <h4>MENU</h4>-->
-<!--            <ul>-->
-<!--                <li><a href="#"><i class="fa-solid fa-circle-info"></i> Tổng quan</a></li>-->
-<!--                <li><a href="#"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>-->
-<!--                <li><a href="#"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a></li>-->
-<!--                <li><a href="#"><i class="fa-solid fa-user-gear"></i> Quản lý nhân viên</a></li>-->
-<!--                <li><a href="#"><i class="fa-solid fa-user"></i> Quản lý khách hàng</a></li>-->
-<!--                <li><a href="#"><i class="fa-regular fa-file-lines"></i> Quản lý bài viết</a></li>-->
-<!--                <li><a href="#" data-bs-toggle="modal" data-bs-target="#addNewMovie">-->
-<!--                    <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a></li>-->
-<!--            </ul>-->
+    <section>
+        <div class="row my-5 dashboard-admin">
+            <div class="col-lg-3 sidebar-admin">
+                <h4>MENU</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item active"><a href="#"><i class="fa-solid fa-gauge-high"></i> Tổng quan</a>
+                    </li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a>
+                    </li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-user-pen"></i></i> Quản lý nhân
+                        viên</a></li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-users-viewfinder"></i></i> Quản lý
+                        khách hàng</a></li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-file-lines"></i></i> Quản lý bài viết</a>
+                    </li>
+                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-9 ps-5 table-dashboard order">
+                <div class="create">
+                    <a href="/dashboard/add"><i class="fa-solid fa-square-plus"></i> Thêm phim mới</a>
+                </div>
+                <div class="table-main">
+                    <div class="search-table">
+                        <form>
+                            <div class="row">
+                                <div class="col-lg-5">
+                                    <div class="col-lg-6 form-floating mb-3">
+                                        <input type="text" class="form-control" id="codeOrder"
+                                               placeholder="name@example.com">
+                                        <label for="codeOrder"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo mã
+                                            phim</label>
+                                    </div>
+                                </div>
+                                <div class="col-lg-7 d-flex justify-content-between">
+                                    <div class="col-auto form-floating mb-3">
+                                        <input type="text" class="form-control" id="nameFilm"
+                                               placeholder="name@example.com">
+                                        <label for="nameFilm"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo tên
+                                            phim</label>
+                                    </div>
+                                    <div class="col-auto form-floating mb-3">
+                                        <input type="date" class="form-control" id="dateOrder">
+                                        <label for="dateOrder"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
+                                            thời gian</label>
+                                    </div>
+                                    <div class="col-lg-2 form-floating mb-3">
+                                        <input type="submit" class="form-control btn btn-primary" value="Tìm">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">TÊN PHIM</th>
+                            <th scope="col">ĐẠO DIỄN</th>
+                            <th scope="col">NGÀY CÔNG CHIẾU</th>
+                            <th scope="col">DANH MỤC</th>
+                            <th scope="col">THAO TÁC</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="movie : ${movies}">
+                            <td th:text="${'#' + movie.id}">#12921</td>
+                            <td th:text="${movie.title}">Vầng Trăng Máu</td>
+                            <td th:text="${movie.director}">Phạm Văn Thành</td>
+                            <td th:text="${movie.releaseDate}">15h30 28/10/2023</td>
+                            <td th:text="${movie.category.nameCategory}">Hành động</td>
+                            <td>
+                                <a th:href="@{/movie/detail/__${movie.id}__}" title="Xem chi tiết"><i class="fa-solid fa-file-lines"></i></a>
+                                <a th:href="@{/dashboard/update/__${movie.id}__}" title="Sửa"><i class="fa-solid fa-pen-to-square"></i></a>
+                                <a th:href="@{/dashboard/delete/__${movie.id}__}" title="Xóa"><i class="fa-solid fa-trash-can"></i></a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <a class="page-link">Trước</a>
+                        </li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Sau</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <div class="col-lg-8">
-<!--            <a href="#" data-bs-toggle="modal" data-bs-target="#addNewMovie"><i class="fa-solid fa-square-plus"></i> Thêm phim mới</a>-->
-            <a href="#"></i> Thêm phim mới</a>
-            <form class="d-flex" role="search">
-                <input aria-label="Search" class="form-control me-2" placeholder="Search" type="search">
-                <button class="btn btn-outline-success" type="submit">Tìm kiếm</button>
-            </form>
-            <table class="table table-hover" style="text-align: center">
-                <tr>
-                    <th>#</th>
-                    <th>TÊN PHIM</th>
-                    <th>ĐẠO DIỄN</th>
-                    <th>NGÀY CÔNG CHIẾU</th>
-                    <th>DANH MỤC</th>
-                    <th>THAO TÁC</th>
-                </tr>
-                <tr th:each="movie, count : ${movies}">
-                    <td th:text="${'#' + count.count}"></td>
-                    <td th:text="${movie.title}"></td>
-                    <td th:text="${movie.director}"></td>
-                    <td th:text="${movie.releaseDate}"></td>
-                    <td th:text="${movie.category.nameCategory}"></td>
-                    <td>
-                        <span><a href="#"><i class="fa-solid fa-table-list"></i> </a></span>
-                        <span><a href="#"><i class="fa-solid fa-pen-to-square"></i> </a></span>
-                        <span><a href="#"><i class="fa-solid fa-trash"></i> </a></span>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
+    </section>
 </div>
-
-<!--ADD NEW MOVIE-->
-<!--<div class="modal fade" id="addNewMovie" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-<!--    <div class="modal-dialog">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm phim mới</h1>-->
-<!--                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--            </div>-->
-<!--            <div class="modal-body">-->
-<!--                <form th:object="${newMovie}" action="/dashboard/add" method="post">-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="title" class="col-form-label">Movie title:</label>-->
-<!--                        <input th:field="*{title}" type="text" name="title" class="form-control" id="title">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="desc" class="col-form-label">Movie description:</label>-->
-<!--                        <input th:field="*{description}" type="text" name="code" class="form-control" id="desc">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="date" class="col-form-label">Release date:</label>-->
-<!--                        <input th:field="*{releaseDate}" type="date" name="code" class="form-control" id="date">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="category" class="col-form-label">Category:</label>-->
-<!--                        <input th:field="*{category}" type="text" name="category" class="form-control" id="category">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="director" class="col-form-label">Director:</label>-->
-<!--                        <input th:field="*{director}" type="text" name="code" class="form-control" id="director">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="avatar" class="col-form-label">Image:</label>-->
-<!--                        <input th:field="*{avatar}" type="text" name="code" class="form-control" id="avatar">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="bg" class="col-form-label">Background:</label>-->
-<!--                        <input th:field="*{banner}" type="text" name="code" class="form-control" id="bg">-->
-<!--                    </div>-->
-<!--                    <div class="modal-footer">-->
-<!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>-->
-<!--                        <button type="submit" class="btn btn-primary">Xác nhận</button>-->
-<!--                    </div>-->
-<!--                </form>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--UPDATE MOVIE-->
 <footer th:replace="~{layout::footer}"></footer>
-<script>
-    const exampleModal = document.getElementById('exampleModal')
-    if (exampleModal) {
-        exampleModal.addEventListener('show.bs.modal', event => {
-            // Button that triggered the modal
-            const button = event.relatedTarget
-            // Extract info from data-bs-* attributes
-
-            // Update the modal's content.
-            const modalTitle = exampleModal.querySelector('.modal-title')
-            const modalBodyInput = exampleModal.querySelector('.modal-body input')
-
-        })
-    }
-</script>
 </body>
 </html>
