--- a/movie-ticket/src/main/resources/templates/index.html
+++ b/movie-ticket/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
         <div class="row mt-3">
             <div th:each="category: ${categories}" class="col-lg-3 my-3">
                 <div class="card text-bg-dark">
-                    <img th:src="${'/image/'+category.image}" class="card-img" th:alt="${category.nameCategory}">
+                    <img th:src="${category.image}" class="card-img" th:alt="${category.nameCategory}">
                     <div class="card-img-overlay d-flex justify-content-center align-items-center">
                         <h5 class="card-title" th:text="${category.nameCategory}">Hành động</h5>
                     </div>
