--- a/movie-ticket/src/main/resources/templates/category/view-category.html
+++ b/movie-ticket/src/main/resources/templates/category/view-category.html
@@ -11,7 +11,7 @@
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
-                <h3 th:text="${'Xem danh mục ' + category.id}" class="my-4">Xem danh mục phim</h3>
+                <h3 th:text="${'Xem danh mục ' + category.nameCategory}" class="my-4">Xem danh mục phim</h3>
                 <div class="mb-3 row">
                     <label for="nameCategory" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
