thanh update phan trang

--- a/movie-ticket/src/main/resources/templates/category/dashboard-admin-category.html
+++ b/movie-ticket/src/main/resources/templates/category/dashboard-admin-category.html
@@ -21,14 +21,14 @@
                                 <div class="col-lg-5">
                                     <div class="col-lg-6 form-floating mb-3">
                                         <input type="text" class="form-control" id="idCategory" name="idCategory"
-                                               placeholder="Nhập id">
+                                               placeholder="Nhập id" th:value="${idCategory}">
                                         <label for="idCategory"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo ID</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-7 d-flex justify-content-end">
                                     <div class="col-auto form-floating mb-3 me-3">
                                         <input type="text" class="form-control" id="nameCategory" name="nameCategory"
-                                               placeholder="Nhập tên category">
+                                               placeholder="Nhập tên category" th:value="${nameCategory}">
                                         <label for="nameCategory"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
                                             tên danh mục</label>
                                     </div>
