--- a/movie-ticket/src/main/resources/templates/category/dashboard-admin-category.html
+++ b/movie-ticket/src/main/resources/templates/category/dashboard-admin-category.html
@@ -119,7 +119,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                                <button id="active-delete" type="button" class="btn btn-danger">Xóa</button>
+                                <a id="active-delete" role="button" class="btn btn-danger">Xóa</a>
                             </div>
                         </div>
                     </div>
