--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -81,7 +81,10 @@
                             <td>
                                 <a th:href="@{/dashboard/movies/detail/__${movie.id}__}" title="Xem chi tiết"><i class="fa-solid fa-file-lines"></i></a>
                                 <a th:href="@{/dashboard/movies/update/__${movie.id}__}" title="Sửa"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a th:href="@{/dashboard/movies/delete/__${movie.id}__}" title="Xóa"><i class="fa-solid fa-trash-can"></i></a>
+<!--                                <a th:href="@{/dashboard/movies/delete/__${movie.id}__}" title="Xóa"><i class="fa-solid fa-trash-can"></i></a>-->
+                                <a th:attr="onclick=|sendDataModal('${movie.id}','${movie.title}')|" title="Xóa"
+                                   role="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i
+                                        class="fa-solid fa-trash-can"></i></a>
                             </td>
                         </tr>
                         </tbody>
@@ -104,6 +107,45 @@
         </div>
     </section>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="d-flex">
+                    <div class="icon">
+                        <i class="fa-regular fa-bell"></i>
+                    </div>
+                    <div class="box-header-modal">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Cảnh báo</h1>
+                        <p>Hành động nguy hiểm !</p>
+                    </div>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i
+                        class="fa-solid fa-circle-xmark"></i></button>
+            </div>
+            <div class="modal-body">
+                Bạn có chắc chắn muốn xóa phim <span id="name-delete"
+                                                              class="text-danger"></span> này không?
+                Hành động này sẽ không thể khôi phục lại!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                <a role="button" id="active-delete" class="btn btn-danger">Xóa</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <footer th:replace="~{layout::footer}"></footer>
+<script>
+    function sendDataModal(id, name) {
+        $("#name-delete").html(name)
+        $("#active-delete").attr("href", "/dashboard/movies/delete/" + id)
+    }
+
+</script>
 </body>
 </html>
