--- a/movie-ticket/src/main/resources/templates/movie/details.html
+++ b/movie-ticket/src/main/resources/templates/movie/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{layout::head}">
 </head>
 <body>
@@ -8,53 +8,63 @@
     <section>
         <div class="row my-5 dashboard-admin">
             <div class="col-lg-3 sidebar-admin">
-                <h4>MENU</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item active"><a href="#"><i class="fa-solid fa-gauge-high"></i> Tổng quan</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-user-pen"></i></i> Quản lý nhân
-                        viên</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-users-viewfinder"></i></i> Quản lý
-                        khách hàng</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-file-lines"></i></i> Quản lý bài viết</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-                    </li>
-                </ul>
+                <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
-            <div class="col-lg-9 ps-5 table-dashboard order">
-                <div class="table-main">
-                    <div class="search-table">
-                    </div>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col"><img th:src="${movie.avatar}" alt="Ảnh đại diện"></th>
-                            <th scope="col" th:text="${movie.title}">TÊN FILM</th>
-                            <th scope="col" th:text="${movie.description}">KHÁCH HÀNG</th>
-                            <th scope="col" th:text="${movie.director}">SUẤT CHIẾU</th>
-                            <th scope="col" th:text="${movie.releaseDate}">TỔNG TIỀN</th>
-                            <th scope="col"><a href="#" class="btn btn-primary">ĐẶT VÉ NGAY</a></th>
-                        </tr>
-                        </thead>
-                    </table>
+            <div class="col-lg-9 ps-5 table-dashboard category">
+                <div class="create">
+                    <a href="/dashboard/movies"><i class="fa-solid fa-arrow-left"></i> &nbsp; Quay lại</a>
                 </div>
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link">Trước</a>
-                        </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Sau</a>
-                        </li>
-                    </ul>
-                </nav>
+                <h3 class="my-4" th:text="${'Chi tiết phim  ' + movie.title}">Xem chi tiết phim</h3>
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="row mb-3" id="preview-image-add">
+                            <div class="col-sm-12">
+                                <div class="img-thumbnail" id="image-preview-container2">
+                                    <img alt="image chose" height="auto" src="" th:src="${movie.avatar}" width="300px"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div class="mb-3 row">
+                            <label class="col-sm-5 col-form-label" for="title">Tên phim</label>
+                            <div class="col-sm-10">
+                                <input class="form-control-plaintext" id="title" readonly th:value="${movie.title}"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-5 col-form-label" for="director">Đạo diễn</label>
+                            <div class="col-sm-10">
+                                <input class="form-control-plaintext" id="director" readonly th:value="${movie.director}"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-5 col-form-label" for="release">Ngày khởi chiếu</label>
+                            <div class="col-sm-10">
+                                <input class="form-control-plaintext" id="release" readonly th:value="${movie.releaseDate}"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-5 col-form-label" for="category">Thể loại</label>
+                            <div class="col-sm-10">
+                                <input class="form-control-plaintext" id="category" readonly th:value="${movie.category.nameCategory}"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label class="col-sm-5 col-form-label" for="description">Mô tả</label>
+                            <div class="col-sm-10">
+<!--                                <input class="form-control-plaintext" id="description" readonly-->
+<!--                                       th:value="${movie.description}"-->
+<!--                                       type="text">-->
+                                <p id="description" th:text="${movie.description}"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
