--- a/movie-ticket/src/main/resources/static/css/main.css
+++ b/movie-ticket/src/main/resources/static/css/main.css
@@ -173,8 +173,7 @@ section#banner-footer .card.text-bg-dark {
 }
 
 footer p, li.list-group-item a {
-    color: #848484;
-    font-family: Quicksand;
+    color: #848484 !important;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
