--- a/movie-ticket/src/main/resources/templates/movie/update.html
+++ b/movie-ticket/src/main/resources/templates/movie/update.html
@@ -47,6 +47,9 @@
             <div class="mb3">
                 <input class="btn btn-primary" type="submit" value="Xác nhận">
             </div>
+            <div class="mb3">
+                <a class="btn btn-secondary" role="button" href="http://localhost:8080/dashboard/movies">Quay lại</a>
+            </div>
         </form>
     </div>
 </div>
