--- a/movie-ticket/src/main/resources/templates/movie/add.html
+++ b/movie-ticket/src/main/resources/templates/movie/add.html
@@ -7,48 +7,155 @@
 <div class="container" style="margin-top: 40px">
     <header th:replace="~{layout::header}"></header>
     <div class="row">
-        <form th:object="${movieDto}" action="/dashboard/movies/confirm-add" method="post">
+        <form action="/dashboard/movies/confirm-add" method="post" th:object="${movieDto}">
             <div class="mb-3">
-                <label for="title" class="form-label">Tên phim</label>
-                <input th:field="*{title}" type="text" class="form-control" id="title">
-                <p style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
+                <label class="form-label" for="title">Tên phim</label>
+                <input class="form-control" id="title" th:field="*{title}" type="text">
+                <p style="color: red" th:errors="*{title}" th:if="${#fields.hasErrors('title')}"></p>
             </div>
             <div class="mb-3">
-                <label for="director" class="form-label">Đạo diễn</label>
-                <input th:field="*{director}" type="text" class="form-control" id="director">
-                <p style="color: red" th:if="${#fields.hasErrors('director')}" th:errors="*{director}"></p>
+                <label class="form-label" for="director">Đạo diễn</label>
+                <input class="form-control" id="director" th:field="*{director}" type="text">
+                <p style="color: red" th:errors="*{director}" th:if="${#fields.hasErrors('director')}"></p>
             </div>
             <div class="mb-3">
-                <label for="releaseDate" class="form-label">Ngày công chiếu</label>
-                <input th:field="*{releaseDate}" type="date" class="form-control" id="releaseDate">
-                <p style="color: red" th:if="${#fields.hasErrors('releaseDate')}" th:errors="*{releaseDate}"></p>
+                <label class="form-label" for="releaseDate">Ngày công chiếu</label>
+                <input class="form-control" id="releaseDate" th:field="*{releaseDate}" type="date">
+                <p style="color: red" th:errors="*{releaseDate}" th:if="${#fields.hasErrors('releaseDate')}"></p>
             </div>
             <div class="mb-3">
-                <label for="category" class="form-label">Thể loại</label>
-                <select id="category" th:field="*{category}" name="category" class="form-select" aria-label="Default select example">
-                    <option th:each="category : ${categoryList}" th:text="${category.nameCategory}" th:value="${category.id}" >Open this select menu</option>
+                <label class="form-label" for="category">Thể loại</label>
+                <select aria-label="Default select example" class="form-select" id="category" name="category"
+                        th:field="*{category}">
+                    <option th:each="category : ${categoryList}" th:text="${category.nameCategory}"
+                            th:value="${category.id}">Open this select menu
+                    </option>
                 </select>
             </div>
-            <div class="mb-3">
-                <label for="img" class="form-label">Ảnh phim</label>
-                <input th:field="*{avatar}" type="text" class="form-control" id="img">
-                <p style="color: red" th:if="${#fields.hasErrors('avatar')}" th:errors="*{avatar}"></p>
+            <div class="row mb-3">
+                <label class="col-sm-2 col-form-label">Hình ảnh danh mục</label>
+                <div class="col-sm-10">
+                    <div>
+                        <input class="form-control" type="file" id="upload-file" multiple
+                               accept=".jpg, .jpeg, .png" onchange="limitFiles(this,1)">
+                        <input name="image2" type="hidden" id="image2" th:field="*{avatar}" required>
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="banner" class="form-label">Ảnh bìa</label>
-                <input th:field="*{banner}" type="text" class="form-control" id="banner">
-                <p style="color: red" th:if="${#fields.hasErrors('banner')}" th:errors="*{banner}"></p>
+            <div id="preview-image-add" class="row mb-3" style="display: none">
+                <div class="col-sm-2"><label class="col-form-label">Hình ảnh xem trước</label></div>
+                <div class="col-sm-10">
+                    <div id="image-preview-container2" class="img-thumbnail">
+                        <img th:src="*{avatar}" alt="image chose" src=""/>
+                        <input type="hidden" th:value="*{avatar}" required>
+                    </div>
+                </div>
             </div>
+            <div class="row mb-3">
+                <label class="col-sm-2 col-form-label">Hình ảnh danh mục</label>
+                <div class="col-sm-10">
+                    <div>
+                        <input class="form-control" type="file" id="upload-banner" multiple
+                               accept=".jpg, .jpeg, .png" onchange="limitFiles(this,1)">
+                        <input name="image3" id="image3" type="hidden"  th:field="*{banner}" required>
+                    </div>
+                </div>
+            </div>
+            <div id="preview-banner-add" class="row mb-3" style="display: none">
+                <div class="col-sm-2"><label class="col-form-label">Hình ảnh xem trước</label></div>
+                <div class="col-sm-10">
+                    <div id="image-preview-banner" class="img-thumbnail">
+                        <img th:src="*{banner}" alt="image chose" src=""/>
+                        <input type="hidden" th:value="*{banner}" required>
+                    </div>
+                </div>
+            </div>
+<!--            <div class="mb-3">-->
+<!--                <label class="form-label" for="banner">Ảnh phim</label>-->
+<!--                <input accept=".jpg, .jpeg, .png" class="form-control" id="upload-banner" multiple-->
+<!--                       onchange="limitFiles(this,1)" type="file">-->
+<!--                <input id="banner" name="image2" required th:field="*{banner}" type="hidden">-->
+<!--                <p style="color: red" th:errors="*{banner}" th:if="${#fields.hasErrors('banner')}"></p>-->
+<!--            </div>-->
+<!--            <div class="row mb-3" id="preview-banner-add" style="display: none">-->
+<!--                <div class="col-sm-2"><label class="col-form-label">Hình ảnh xem trước</label></div>-->
+<!--                <div class="col-sm-10">-->
+<!--                    <div class="img-thumbnail" id="image-preview-banner">-->
+<!--                        <img alt="image chose" src="" th:src="*{banner}"/>-->
+<!--                        <input type="hidden" th:value="*{banner}" required>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="mb-3">
-                <label for="description" class="form-label">Mô tả phim</label>
-                <input th:field="*{description}" type="text" class="form-control" id="description">
-                <p style="color: red" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
+                <label class="form-label" for="description">Mô tả phim</label>
+                <input class="form-control" id="description" th:field="*{description}" type="text">
+                <p style="color: red" th:errors="*{description}" th:if="${#fields.hasErrors('description')}"></p>
             </div>
             <div class="mb3">
                 <input class="btn btn-primary" type="submit" value="Xác nhận">
+
+                <a class="btn btn-secondary" href="http://localhost:8080/dashboard/movies" role="button">Quay lại</a>
             </div>
         </form>
     </div>
 </div>
+<footer th:replace="~{layout::footer}"></footer>
+<script>
+    function limitFiles(input, maxFiles) {
+        if (input.files.length > maxFiles) {
+            alert(`Chỉ được chọn đúng ${maxFiles} tệp.`);
+            input.value = ""; // Xóa tệp đã chọn nếu vượt quá giới hạn
+        }
+    }
+
+    document.getElementById("upload-file").addEventListener("change", function (e) {
+        document.getElementById("preview-image-add").style.display = "flex";
+        const container = document.getElementById("image-preview-container2");
+        container.innerHTML = "";
+        const maxFiles = 1;
+        const files = e.target.files;
+        if (files.length !== maxFiles) {
+            alert(`Bạn phải chọn đúng ${maxFiles} tệp.`);
+            e.target.value = "";
+            return;
+        }
+        for (let i = 0; i < files.length; i++) {
+            const file = files[i];
+            const img = document.createElement("img");
+            img.src = URL.createObjectURL(file);
+            img.style.width = "300px"
+            img.style.height = "150px"
+            container.appendChild(img);
+        }
+    });
+</script>
+<script>
+    document.getElementById("upload-banner").addEventListener("change", function (e) {
+        document.getElementById("preview-banner-add").style.display = "flex";
+        const container = document.getElementById("image-preview-banner");
+        container.innerHTML = "";
+        const maxFiles = 1;
+        const files = e.target.files;
+        if (files.length !== maxFiles) {
+            alert(`Bạn phải chọn đúng ${maxFiles} tệp.`);
+            e.target.value = "";
+            return;
+        }
+        for (let i = 0; i < files.length; i++) {
+            const file = files[i];
+            const img = document.createElement("img");
+            img.src = URL.createObjectURL(file);
+            img.style.width = "300px"
+            img.style.height = "150px"
+            container.appendChild(img);
+        }
+    });
+</script>
+<script src="/js/configulation.js" type="module"></script>
+<script src="/js/configulation2.js" type="module"></script>
+<script src="/js/upload.js" type="module"></script>
+<script src="/js/upload2.js" type="module"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
 </body>
 </html>
